--- a/monitor-datafrugal/setup/docker-compose.yaml
+++ b/monitor-datafrugal/setup/docker-compose.yaml
@@ -8,6 +8,12 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./alert.rules.yml:/etc/prometheus/alert.rules.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--web.enable-lifecycle'
+
+
     networks:
       - monitoring
     extra_hosts:
@@ -17,7 +23,7 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     ports:
-      - "3000:3000"
+      - "9000:3000"
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin  # Change this for better security
     depends_on:
@@ -26,6 +32,38 @@ services:
       - monitoring
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
+  
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    restart: unless-stopped
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--path.rootfs=/rootfs'
+    ports:
+      - "9100:9100"
+    networks:
+      - monitoring
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+  
+
+  alertmanager:
+    image: prom/alertmanager
+    ports:
+      - "9093:9093"
+    volumes:
+      - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml
+    restart: always
+    networks:
+      - monitoring
+    command:
+      - '--config.file=/etc/alertmanager/alertmanager.yml'
 
 networks:
   monitoring:
