--- a/monitor-datafrugal/setup/prometheus.yml
+++ b/monitor-datafrugal/setup/prometheus.yml
@@ -5,3 +5,23 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['host.docker.internal:9100']  # 'host.docker.internal' will refer to your local machine
+
+
+  - job_name: 'spring-boot-app'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['host.docker.internal:8086']
+
+  - job_name: "ec2-nodes"
+    static_configs:
+      - targets: ["54.160.180.185:9100"]
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets: ['localhost:9093']
+
+
+
+rule_files:
+  - "/etc/prometheus/alert.rules.yml" 
