added working c2 high cpu usage trigger

--- a/monitor-datafrugal/setup/prometheus.yml
+++ b/monitor-datafrugal/setup/prometheus.yml
@@ -19,7 +19,7 @@ scrape_configs:
 alerting:
   alertmanagers:
     - static_configs:
-        - targets: ['localhost:9093']
+        - targets: ['host.docker.internal:9093']
 
 
 
